@@ -5,6 +5,10 @@ Revision history for Date-Easy
     [Docs]
     * Reviewed all POD and fixed a few typos
 
+    [Distro Fixes]
+    * Fix format test so it can handle weird chars in default format
+      github #9 (thx richlv)
+
 0.08      2019-06-28 17:42:42-07:00 America/Los_Angeles
 
     [Distro Fixes]
